# chatbot

./: .gitignore  Dockerfile  README.md  agent.json  pyproject.toml
entities/: destination.json  destination_entries_en.json  end.json  end_entries_en.json  entity.json  entity_entries_en.json  group.json  group_entries_en.json  hour.json  hour_entries_en.json  location.json  location_entries_en.json  middlebox.json  middlebox_entries_en.json  operation.json  operation_entries_en.json  origin.json  origin_entries_en.json  protocol.json  protocol_entries_en.json  qos_constraint.json  qos_constraint_entries_en.json  qos_metric.json  qos_metric_entries_en.json  qos_unit.json  qos_unit_entries_en.json  qos_value.json  qos_value_entries_en.json  service.json  service_entries_en.json  start.json  start_entries_en.json  target.json  target_entries_en.json  traffic.json  traffic_entries_en.json
intents/: build - accepted.json  build - accepted_usersays_en.json  build - rejected - feedback - no - no.json  build - rejected - feedback - no - no_usersays_en.json  build - rejected - feedback - no - yes.json  build - rejected - feedback - no - yes_usersays_en.json  build - rejected - feedback - no.json  build - rejected - feedback - no_usersays_en.json  build - rejected - feedback - yes.json  build - rejected - feedback - yes_usersays_en.json  build - rejected - feedback.json  build - rejected - feedback_usersays_en.json  build - rejected.json  build - rejected_usersays_en.json  build.json  build_usersays_en.json  cancel.json  cancel_usersays_en.json  default.json  goodbye.json  (+5 more)
(+11 files in other folders)
